# cpp-term-project

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/libsodium/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  utility.cpp  utility.h
src/db/: Account.cpp  Account.h  Config.cpp  Config.h  Db.cpp  Db.h  Employee.h  Record.cpp  Record.h  User.cpp  User.h
src/ui/: Dashboard.cpp  Dashboard.h  EmployeeDashboard.cpp  EmployeeDashboard.h  LoginDialog.cpp  LoginDialog.h  UserDashboard.cpp  UserDashboard.h
src/ui/widgets/: AccountInfoLabel.cpp  AccountInfoLabel.h  AccountWidget.cpp  AccountWidget.h  DashBoardFinder.cpp  DashBoardFinder.h  DashboardWidget.cpp  DashboardWidget.h  DashboardWidgetEmployee.cpp  DashboardWidgetEmployee.h  DashboardWidgetUser.cpp  DashboardWidgetUser.h  EmployeeWidget.cpp  EmployeeWidget.h  RecordsModel.cpp  RecordsModel.h  UserDialog.cpp  UserDialog.h  UsersModel.cpp  UsersModel.h
